# qcqp

./: .gitignore  .style.yapf  requirements.txt
.run/: random_small.run.xml  random_small_bb.run.xml
assets/: markdown.css
doc/: main.tex
doc/headers/: qcqp.bib
doc/sections/: intro.tex  sdp.tex
docs/: admm_msc.tex  chord.tex  figs  main.tex  qap.tex  qp-box.tex  review.tex  slides.bcf  slides.run.xml  slides.tex  slides_20210517.tex  slides_20210524.tex  slides_20210531.tex  slides_20210607.tex  slides_20210614.tex  slides_20210628.tex  slides_20210710.tex  slides_20211024.tex  slides_20211026.tex  slides_error_explained.tex  snl.tex  test.tex
docs/dr/: bounds.md
docs/draft/: bounds.md  chord.md  class.md  coloring_sdp.md  old_note.sh  primal.md  relaxations.md  ws.md
docs/headers/: cmd.tex  header.mp.tex  header.note.tex  header.siam.tex  header.slides.tex  qcqp.bib
docs/milestones/: 220114-rank1.tex  220127-small-talk.tex
docs/report/: slides_20210510.tex  slides_20210517.tex  slides_20210614.tex  slides_20210628.tex  slides_20210710.tex  slides_20211024.tex  slides_20211112.tex  slides_20211126.tex  slides_20211220.tex  slides_20220103.tex  slides_20220114.tex  slides_20220207.tex  slides_20220228.tex
docs/sections/: admm.tex  app.qkp.tex  app.tex  appendix.tex  bc.tex  chord.tex  intro.tex  primal.tex  relax.sdp.tex  relax.socp.tex  sdp.tex  ws.tex
docs/tms/: class.tex  class.tm  mix-cone.tex  mix-cone.tm  qcqp-r.md
examples/boxqp/: boxqp.200.0.json  boxqp.200.1.json  boxqp.200.10.lr.json  boxqp.200.2.json  boxqp.200.5.lr.json  boxqp.200.5.lr1.json  boxqp.50.1.json  boxqp.50.2.json  boxqp.7.0.json
examples/easy/: 1.json  4.json  5.json
examples/qcl/: 0018.json  2712.json  2761.json
examples/qcq/: 0911.json  1055.json  1940.json  README.md
examples/qcqeq/: 1143.json  1619.json
notes/: plan.md  qcqp.bib
qcqp/: __init__.py  bg_cvx.py
sbin/: fixed_norm.ipynb  fixed_norm_admm.ipynb  maxcut.sh  soutif.sh  test_random.sh
sbin/maxcut/: maxcut_method_exp.xls
src/: CMakeLists.txt  FindCOPT.cmake  FindDSDP.cmake  FindSDPA.cmake  ShipPythonScript.cmake  generate.py
src/cpp/: CMakeLists.txt  bb_copt.cpp  bb_copt.h  bb_dsdp.cpp  bb_dsdp.h  bg_copt.cpp  bg_copt.h  bg_dsdp.cpp  bg_dsdp.h  bg_dsdp_cut.cpp  bg_dsdp_cut.h  bg_sdpa.cpp  bg_sdpa.h  branch.cpp  branch.h  cut.cpp  cut.h  io.cpp  io.h  null.cpp  qcqp.cpp  qcqp.h  qp.cpp  qp.h  result.cpp  result.h  tree.cpp  tree.h  trust.cpp  trust.h  utils.cpp  utils.h
src/cpp/bbtest/: CMakeLists.txt  test_bg_copt.cpp  test_bg_dsdp.cpp
src/cpp/mip/: CMakeLists.txt  sdpa_try.h
src/cpp/test/: CMakeLists.txt  example_copt_qcp_ex1.c  example_copt_qp_ex1.c  example_copt_socp_ex1.c  example_dsdp_color.cpp  example_dsdp_maxcut.c  example_dsdp_maxcut.cpp  example_dsdp_readsdpa.c  example_dsdp_stable.c  example_sdpa.cpp  test_bg_copt.cpp  test_bg_copt_ipm.cpp  test_bg_dsdp.cpp  test_bg_sdpa.cpp  test_qp.cpp  test_utils.cpp
src/pyqp/: CMakeLists.txt  bb.py  bb_chord.py  bb_diag.py  bb_mix.py  bb_mmsc.py  bb_msc.py  bb_msc2.py  bb_msc3.py  bb_msc4.py  bb_nmsc.py  bb_socp.py  bg_cvx.py  bg_grb.py  bg_msk.py  bg_msk_admm.py  bg_msk_asocp.py  bg_msk_betas.py  bg_msk_chordal.py  bg_msk_ex.py  bg_msk_mat.py  bg_msk_mc.py  bg_msk_msc.py  bg_msk_msc_admm.py  bg_msk_msc_ipm.py  bg_msk_norm.py  bg_msk_norm_admm.py  classes.py  ex_structure.py  grb.py  heur_msc.py  house.py  instances.py  primal_rd.py  solver.py
src/pyqp/archaic/: bb_msc.py
src/pyqp/unclear/: bb_msc.py  bb_socp.py  bg_msk_chordal.py  bg_msk_homo.py
src/pyqptest/: CMakeLists.txt  gen_bqp.py  gen_cvx_diag.py  gen_low_rank.py  gen_qp_cvx_diag.py  gen_qp_dnn.py  gen_qp_low_rank.py  generate.py  helpers.py  r1decomp.py  random_small.py  run.py  run_batch.py  run_random.py  small.py  small_batch.py  small_random.py
src/pyqptest/msc/: config.py  heur_small.py  qkp_soutif_bb.py  random_bb_bg.py  random_mc.py
src/scripts/: bilinear_socp.py  kissing.ipynb  kissing.py  r1_decomp.py
src/test/: CMakeLists.txt  __init__.py  evaluation.py  helpers.py  max_cut.py  maxcut.py  qap.py  qkp_soutif.py  qkp_soutif_add_quad.py  qkp_soutif_all.py  random_qcqp.py  random_small.py  random_small_bb.py  small.py  snl.py
src/test/bb/: qkp_soutif_bb.py  qkp_soutif_bb_all.py  random_bb.py  random_bb_bg.py  random_bb_small.py  random_small_bb.py
src/test/msc/: config.py  heur_small.py  qkp_soutif.py  qkp_soutif_bb.py  random_bb_bg.py  random_bb_small.py  random_mc.py  random_qp_small.py  random_small.py  random_small_bb.py
src/test/msk/: qkp_soutif_msk.py
src/utils/: alias.sh  dump.py  parse_box_qp.py  parse_qplib_to_json.py  qr_lowrank.py  run.batch.zsh  run.qplib.zsh  todo
test/: evaluation.py  qkp_qiyao.py  qkp_soutif.py  qkp_soutif_add_quad.py  qkp_soutif_all.py  random_qcqp.py
utils/: parse_qplib_to_json.py
